# Impetus-Lock

./: .actrc  .gitignore  .secrets.example  AI_INTEGRATION_STATUS.md  API_CONTRACT.md  ARCHITECTURE_GUARDS.md  ARCHITECTURE_SAFETY_NET_STATUS.md  AUDIO_FEEDBACK_GUIDE.md  BROWSER_TEST_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  DEPENDENCY_MANAGEMENT.md  DEVELOPMENT.md  E2E_FIX_SUMMARY.md  E2E_TEST_STATUS.md  FINAL_SESSION_SUMMARY.md  LICENSE  LOCK_REFACTORING_TESTS_README.md  MANUAL_TESTING_GUIDE.md  P0_CRITICAL_FIXES_SUMMARY.md  PHASE3_COMPLETE.md  PHASE5_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART_TESTING.md  README.md  READY_FOR_TESTING.md  RESEARCH_FINDINGS.md  SESSION_SUMMARY.md  TESTING.md  TEST_SUITE_EXAMPLES.md  TEST_SUITE_SUMMARY.md  US2_IMPLEMENTATION_COMPLETE.md  diagnose-e2e.ps1  run-e2e-simple.ps1  run-e2e-tests.ps1  run-lint.ps1  run-tests.ps1  run-unit-tests.ps1
.claude/: settings.local.json
.github/: AI_PR_WORKFLOW.md  dependabot.yml
.github/workflows/: ci-with-e2e.yml.example  ci.yml  e2e.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
client/: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  CREDITS.md  LOCK_REJECTION_DEBUG.md  eslint.config.js  index.html  manual-test-phase5.html  package-lock.json  package.json  playwright.config.ts  test-e2e-results.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
client/e2e/: database-persistence.spec.ts  demo-showcase.spec.ts  editor-initialization.spec.ts  keyboard-hint-footer.spec.ts  llm-settings.spec.ts  lock-rejection-feedback.spec.ts  locked-content-styling.spec.ts  manual-testing-newbie.spec.ts  manual-trigger.spec.ts  new-user-audit.spec.ts  onboarding-checklist.spec.ts  production-build.spec.ts  quick-check.spec.ts  responsive.spec.ts  sensory-feedback.spec.ts  smoke.spec.ts  storage-state.json  test-manual-trigger-click.spec.ts  test-trigger-debug.spec.ts  timer-visibility.spec.ts  welcome-modal.spec.ts
client/scripts/: manual-user-flow.mjs  run-preview-e2e.mjs  run-vitest.mjs
client/src/: App.css  App.tsx  index.css  main.tsx
demo-artifacts/: impetus-lock-demo.webm
docs/: INDEX.md  REPOSITORY_ORGANIZATION.md  observability.md  prompts.md
docs/process/: PHASE_4_COMPLETE.md  PHASE_5_INTEGRATION_COMPLETE.md  US2_IMPLEMENTATION_COMPLETE.md  US2_PROGRESS_SUMMARY.md  checkpoint.md  qa-privacy-checklist.md
docs/reports/: ACT_CLI_VALIDATION_REPORT.md  ACT_VS_GITHUB_ACTIONS_COMPARISON.md  COMPREHENSIVE_REVIEW_REPORT.md  GITHUB_ACTIONS_ANALYSIS.md
docs/security/: byok-storage.md
docs/sessions/: FINAL_SESSION_SUMMARY.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_STATUS.md  PROJECT_STATUS_REPORT.md  SESSION_CONTINUATION_SUMMARY.md
scripts/: act-sync.ps1  act-sync.sh  ai-monitor-ci.sh  ai-pr-create.sh  dev-start-native.ps1  dev-start.ps1  dev-start.sh  generate_prompt_module.py  prompt_eval.py  record-demo.sh  validate.sh
server/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  start_server.sh  start_with_env.sh
server/.venv.windows.broken_1762782069/: pyvenv.cfg
server/.venv.windows.broken_1762782069/Scripts/: activate  activate.bat  activate.fish  activate.nu  activate.ps1  activate_this.py
server/.venv.windows.wslbak/: pyvenv.cfg
server/.venv.windows.wslbak/Scripts/: activate  activate.bat
server/alembic/: env.py
server/alembic/versions/: fb9f80851e60_initial_migration_tasks_and_.py
server/server/: __init__.py
server/server/api/: README.md  dependencies.py  main.py
server/server/api/routes/: intervention.py  metrics.py  tasks.py  testing.py
server/server/application/: README.md  _placeholder.py
server/server/application/services/: __init__.py  intervention_service.py
server/server/domain/: README.md  _placeholder.py  errors.py  llm_provider.py  text_window.py
server/server/domain/entities/: __init__.py  intervention_action.py  task.py
server/server/domain/models/: __init__.py  anchor.py  intervention.py
server/server/domain/repositories/: __init__.py  task_repository.py
server/server/infrastructure/: README.md  _placeholder.py
server/server/infrastructure/cache/: __init__.py  idempotency_cache.py
server/server/infrastructure/llm/: __init__.py  anthropic_provider.py  base_provider.py  debug_provider.py  gemini_provider.py  instructor_provider.py  provider_registry.py
server/server/infrastructure/llm/prompts/: loki_prompt.py  muse_prompt.py  prompt_registry.py
server/server/infrastructure/logging/: json_formatter.py
server/server/infrastructure/observability/: __init__.py  metrics.py  tracing.py
server/server/infrastructure/persistence/: __init__.py  database.py  in_memory_task_repository.py  models.py  postgresql_task_repository.py
server/server/prompts/: __init__.py  loki.toml  muse.toml
server/tests/: __init__.py  conftest.py  test_database_fallback.py  test_idempotency_cache.py  test_intervention_api.py  test_intervention_service.py  test_logging_middleware.py  test_loki_logic.py  test_main.py  test_metrics_endpoint.py  test_observability_redaction.py  test_prompt_parser.py  test_prompt_templates.py  test_provider_registry.py  test_tracing_helper.py
specs/: README.md
specs/001-impetus-core/: PLANNING_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup  update_tasks.sh
specs/002-vibe-enhancements/: IMPLEMENTATION_COMPLETE.md  analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-vibe-completion/: CI_VALIDATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fix-e2e-workflow/: COMPLETION.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-markdown-toolbar/: ACCESSIBILITY_AUDIT.md  COMPLETION.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_VALIDATION.md  MANUAL_TESTING_GUIDE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-responsive-design/: COMPLETION.md  plan.md  quickstart.md  (+3 more)
(+218 files in other folders)
