[tool.poetry]
name = "impetus-lock-server"
version = "0.1.0"
description = "FastAPI backend for Impetus Lock"
authors = ["Impetus Team <team@impetus-lock.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
instructor = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.28.1"
ruff = "^0.8.0"
mypy = "^1.11.0"
types-requests = "^2.32.0"
import-linter = "^2.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "T20", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.importlinter]
root_package = "server"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Clean Architecture: Domain Layer Independence"
type = "forbidden"
source_modules = ["server.server.domain"]
forbidden_modules = [
    "server.server.application",
    "server.server.infrastructure",
    "server.server.api",
]
ignore_imports = []

[[tool.importlinter.contracts]]
name = "Clean Architecture: Application Layer Dependencies"
type = "forbidden"
source_modules = ["server.server.application"]
forbidden_modules = [
    "server.server.api",
    "server.server.infrastructure",
]
ignore_imports = []

[[tool.importlinter.contracts]]
name = "Clean Architecture: Infrastructure Layer Dependencies"
type = "forbidden"
source_modules = ["server.server.infrastructure"]
forbidden_modules = [
    "server.server.api",
]
ignore_imports = []

[[tool.importlinter.contracts]]
name = "Clean Architecture: API Layer (Outermost)"
type = "layers"
layers = [
    "server.server.api",
    "server.server.application",
    "server.server.domain",
]
containers = ["server.server"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
