[tool.poetry]
name = "impetus-lock-server"
version = "0.1.0"
description = "FastAPI backend for Impetus Lock"
authors = ["Impetus Team <team@impetus-lock.dev>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
instructor = "^1.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
asyncpg = "^0.30.0"
alembic = "^1.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"
ruff = "^0.14.4"
mypy = "^1.11.0"
types-requests = "^2.32.0"
import-linter = "^2.0"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "verify_db.py",
    "check_tables.py",
    "create_migration.py",
    "run_alembic_revision.py",
    "run_alembic_upgrade.py",
    "start_server_test.py",
    "run_server.py",
    "alembic/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "T20", "SIM"]
ignore = ["ANN101", "ANN102", "B008"]  # B008: FastAPI Depends() is safe to use as default

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
plugins = ["pydantic.mypy"]
exclude = [
    "verify_db\\.py$",
    "check_tables\\.py$",
    "create_migration\\.py$",
    "run_alembic_revision\\.py$",
    "run_alembic_upgrade\\.py$",
    "start_server_test\\.py$",
    "run_server\\.py$",
    "alembic/",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

# import-linter configuration temporarily disabled for MVP phase
# Will be re-enabled when P1 features are implemented and layers are populated
#
# Reason: Empty layers (domain/, application/, infrastructure/) cause
# import-linter to fail with "Module does not exist" even with __init__.py
# and placeholder.py files.
#
# This will be uncommented when implementing P1 (un-deletable task lock):
# - server/server/domain/entities/task.py
# - server/server/application/use_cases/lock_task.py
# - server/server/infrastructure/persistence/task_repository.py
#
# For now, architecture enforcement relies on:
# - Frontend: ESLint no-restricted-imports (active in CI)
# - Backend: Manual code review using ARCHITECTURE_GUARDS.md
# - Post-MVP: Re-enable import-linter contracts

# [tool.importlinter]
# root_package = "server"
# include_external_packages = true
#
# [[tool.importlinter.contracts]]
# name = "Clean Architecture: Domain Layer Independence"
# type = "forbidden"
# source_modules = ["server.server.domain"]
# forbidden_modules = [
#     "server.server.application",
#     "server.server.infrastructure",
#     "server.server.api",
# ]
#
# [[tool.importlinter.contracts]]
# name = "Clean Architecture: Application Layer Dependencies"
# type = "forbidden"
# source_modules = ["server.server.application"]
# forbidden_modules = [
#     "server.server.api",
#     "server.server.infrastructure",
# ]
#
# [[tool.importlinter.contracts]]
# name = "Clean Architecture: Infrastructure Layer Dependencies"
# type = "forbidden"
# source_modules = ["server.server.infrastructure"]
# forbidden_modules = [
#     "server.server.api",
# ]
#
# [[tool.importlinter.contracts]]
# name = "Clean Architecture: API Layer (Outermost)"
# type = "layers"
# layers = [
#     "server.server.api",
#     "server.server.application",
#     "server.server.domain",
# ]
# containers = ["server.server"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
